# hash-roll

./: .gitmodules  .travis.yml  COMPARE.md  Cargo.toml  MORE.md  README.md  bors.toml  circ.rs  rustfmt.toml
.github/workflows/: auto-approve.yml  auto-merge.yml  ci.yml
benches/: compare.rs
ci/: script.sh
ci-config/: .gitignore  travis-doc-upload-key.enc  travis-doc-upload.cfg
examples/: generate-test-data.rs
src/: bench.rs  bfbc.rs  bup.rs  buzhash.rs  buzhash_table.rs  circ.rs  fastcdc.rs  gear.rs  gzip.rs  lib.rs  mii.rs  pigz.rs  ram.rs  range.rs  rsyncable.rs  slice.rs  window.rs  zpaq.rs  zstd.rs
src/gear_table/: gear32.rs  gear64.rs  mod.rs
tests/: cuts.rs  cuts_qc.proptest-regressions  cuts_qc.rs  fastcdc.rs  mii.rs  oracle_zpaq.rs  qc_bh.rs  qc_bup.rs  rsyncable.rs  simple.rs
