[package]
name = "hash-roll"
version = "0.2.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
description = "A selection of rolling hashes"
keywords = [ "hash", "rolling", "incremental", "split" ]
license = "AGPL-3.0"
repository = "https://github.com/jmesmon/hash-roll.git"
documentation = "https://docs.rs/hash-roll"
include = ["Cargo.toml", "**/*.rs", "README.md"]

[features]
# Enable things that require nightly rust (benchmarks)
nightly = []

[dependencies]
fmt-extra = "0.2"

[dev-dependencies]
rand = "0.3"
histogram = "0.6"
rollsum = "0.2"
quickcheck = "0.4"

