[package]
name = "hash-roll"
version = "0.3.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
description = "Rolling hashes & Content Defined Chunking (cdc)"
keywords = [ "hash", "rolling", "incremental", "split" , "cdc"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/jmesmon/hash-roll.git"
documentation = "https://docs.rs/hash-roll"
include = ["**/*.rs", "README.md", "COMPARE.md"]
edition = "2018"

[features]
default = [
	"bup",
	"buzhash",
	"fastcdc",
	"gear",
	"gzip",
	"mii",
	"pigz",
	"ram",
	"zpaq",
	"zstd",

]

bup = []
buzhash = []
fastcdc = []
gear = []
gzip = []
mii = []
pigz = []
ram = []
zpaq = []
zstd = []

slow_tests = []

[dependencies]
fmt-extra = "0.2"

[dev-dependencies]
rand = "0.8"
histogram = "0.7"
quickcheck = "1"
rollsum = "0.3"
criterion = "0.5"
rand_pcg = "0.3"
proptest = "1"

[[bench]]
name = "compare"
harness = false
